# encryption_systeme

./: .gitignore  1  1.key  1t  CMakeLists.txt  Makefile  README.md  crypto.c  crypto.h  explorer.c  graphic.c  graphic.h  key.txt  key_handeling.c  main.c
cmake_modules/: FindSDL2.cmake
m.Trancho/: 112.c  xor_plugin.c
m.Trancho/ESGI_TRANCHO_C_Codes/codes_depart/015_02_shapes/: main.c  main_SDL2.c
m.Trancho/ESGI_TRANCHO_C_Codes/codes_depart/057_06_biased_random/: main_windows_friendly.c
m.Trancho/ESGI_TRANCHO_C_Codes/codes_depart/110_11_benchmark_listes/: main.c
m.Trancho/ESGI_TRANCHO_C_Codes/codes_depart/111_11_voyageur/: main.c  rectangle.points
m.Trancho/ESGI_TRANCHO_C_Codes/corrections/007_02_int_hexa/: main.c
m.Trancho/ESGI_TRANCHO_C_Codes/corrections/008_02_affectations/: main.c
m.Trancho/ESGI_TRANCHO_C_Codes/corrections/009_02_traduction/: main.c
m.Trancho/ex_c/: 103.c  108.c  110.c  94.c  ex95.c
m.Trancho/ex_c/ESGI_TRANCHO_C_2A_CC1_start/: image.quadtree  start.c
m.Trancho/math/: 56.txt  66_ex.txt  mini_projet.GLSL.cpp  mini_projet2.GLSL
m.Trancho/projet_final/: Makefile  main.c
m.Trancho/projet_final_2/: Makefile  README.md  main.c
src/: 2.txt  main.c
src/algorithms/: aes.c  aes.h  atbash.c  atbash.h  diffie_hellman.c  diffie_hellman.h  elgamal.c  elgamal.h  hill.c  hill.h  key_handeling.c  key_handeling.h  rsa.c  rsa.h
src/file_func/: delete_file.c  delete_file.h  key_handeling.c
src/plugins/: plugin_interface.h  plugin_manager.c  plugin_manager.h
src/types/: constants.h  encryption_algorithm.h
tests/: benchmark.c  benchmark.h
(+247 files in other folders)
